--- a/package.json
+++ b/package.json
@@ -15,9 +15,11 @@
     "axios": "^1.6.8",
     "cors": "^2.8.5",
     "expo": "~50.0.14",
+    "expo-image-picker": "~14.7.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0"
   },
