--- a/package.json
+++ b/package.json
@@ -19,9 +19,13 @@
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-gesture-handler": "^2.16.0",
     "react-native-paper": "^5.12.3",
     "react-native-safe-area-context": "4.8.2",
-    "react-native-screens": "~3.29.0"
+    "react-native-screens": "~3.29.0",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/metro-runtime": "~3.1.3"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
